--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 *.pptx filter=lfs diff=lfs merge=lfs -text
 *.uasset filter=lfs diff=lfs merge=lfs -text
+Intermediate/* filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
+*.cpp filter=lfs diff=lfs merge=lfs -text
+*.vcxproj filter=lfs diff=lfs merge=lfs -text
+*.filters filter=lfs diff=lfs merge=lfs -text
