에러 몇개 제거

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,3 +34,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="VirtualClubGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="VirtualClubCharacter")
 
+[/Script/Engine.RendererSettings]
+r.AllowGlobalClipPlane=True
+r.DefaultFeature.MotionBlur=False
+
