--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,8 +12,8 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
-StagingDirectory=(Path="")
+BuildTarget=VirtualClub
+StagingDirectory=(Path="D:/KPU/VirtualClub/Packaged/123")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -80,4 +80,5 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/Entry")
 +MapsToCook=(FilePath="/Game/Maps/FirstPersonExampleMap")
++MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap")
 
