--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,6 +4,7 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0AF613364A4B0B340AE8CABD821B4108
+bStartInVR=False
 
 [StartupActions]
 bAddPacks=True
@@ -13,7 +14,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=VirtualClub
-StagingDirectory=(Path="D:/KPU/VirtualClub/Packaged/123")
+StagingDirectory=(Path="D:/KPU/VirtualClub/Packaged/20211226/next/next")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -79,6 +80,5 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/Entry")
-+MapsToCook=(FilePath="/Game/Maps/FirstPersonExampleMap")
-+MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap")
++MapsToCook=(FilePath="/Game/Maps/Club")
 
