--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,8 +12,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/Entry.Entry
-ServerDefaultMap=/Game/Maps/FirstPersonExampleMap.FirstPersonExampleMap
-GlobalDefaultGameMode=/Script/VirtualClub.VirtualClubGameMode
+ServerDefaultMap=/Game/Maps/Club.Club
+GlobalDefaultGameMode=/Game/NewGameMode.NewGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -33,8 +33,19 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="VirtualClubHUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="VirtualClubGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="VirtualClubCharacter")
+bUseFixedFrameRate=False
+FixedFrameRate=75.000000
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=75.000000))
+SmallFontName=/Game/font_Font.font_Font
+TinyFontName=/Game/font_Font.font_Font
+MediumFontName=/Game/font_Font.font_Font
+LargeFontName=/Game/font_Font.font_Font
+SubtitleFontName=/Game/font_Font.font_Font
 
 [/Script/Engine.RendererSettings]
 r.AllowGlobalClipPlane=True
 r.DefaultFeature.MotionBlur=False
+
+[/Script/LevelSequence.LevelSequenceProjectSettings]
+LevelSequence.DefaultDisplayRate=
 
