--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ Intermediate/* filter=lfs diff=lfs merge=lfs -text
 *.cpp filter=lfs diff=lfs merge=lfs -text
 *.vcxproj filter=lfs diff=lfs merge=lfs -text
 *.filters filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
